Update: Desarrollo terminado, comienza optimizacion

--- a/index.html
+++ b/index.html
@@ -120,8 +120,9 @@
 </head>
 
 <body>
+  <!-- Contenedor de ingreso de pipas -->
   <div class="container">
-    <h1 id="">Control de Utilidad</h1>
+    <h1 id="">Control de Utilidad Por Pipa</h1>
 
     <div class="actions">
       <input type="date" id="utilidad_fecha" min="2025-01-01" max="2025-12-31">
@@ -161,6 +162,38 @@
       <p><strong>Total Venta X Dia Y Acumulado:</strong> <span id="totalVentaAcumulado">0</span></p>
       <p><strong>Total Utilidad X Dia Y Acumulado:</strong> <span id="totalUtilidadAcumulado">0</span></p>
     </div>
+  </div>
+
+  <!-- Contenedor de arrastre de utilidad por turno -->
+  <div class="container">
+    <h1 id="">Control de Utilidad Por Turno</h1>
+    <div class="actions">
+      <input type="date" id="utilidad_turno_fecha" min="2025-01-01" max="2025-12-31">
+      <button onclick="agregarTurno()">➕ Agregar Turno</button>
+      <button onclick="procesarTurnosParaExcel()">⚙️ Calcular</button>
+    </div>
+
+    <table id="turnoTable">
+      <thead>
+        <tr>
+          <th>Turno</th>
+          <th>Magna</th>
+          <th>Premium</th>
+          <th>Diesel</th>
+          <th>Acciones</th>
+        </tr>
+      </thead>
+      <tbody>
+        <!-- Se llenará dinámicamente -->
+      </tbody>
+    </table>
+  </div>
+
+  <!-- Scripts -->
+  <script src="utils.js"></script>
+  <script src="dataPipas.js"></script>
+  <script src="dataTurnos.js"></script>
+  <script src="excelUtils.js"></script>
   <script src="app.js"></script>
 </body>
 </html>
