--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     }
 
     .container {
-      max-width: 1100px;
+      max-width: 80%;
       margin: auto;
     }
 
@@ -134,6 +134,7 @@
     <table id="dataTable">
       <thead>
         <tr>
+          <th>COMBUSTIBLE</th>
           <th>PRECIO PIPA VDM</th>
           <th>LITROS COMPRADOS</th>
           <th>PRECIO COMPRA X LITRO</th>
